--- a/TimeBusExample/app/build.gradle
+++ b/TimeBusExample/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compile project(':time_bus')
+//    compile project(':time_bus')
+    compile 'com.developer.prihann:time_bus:1.1.0'
 }
